# saga

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TODO.MD  example.md
source/: CMakeLists.txt  new_saga.c  new_saga.h  saga.c  saga.h  saga_builder.h  saga_checks.h  saga_data.h  saga_hash.h  saga_hash.md  saga_internal.h  saga_preprocessor.h  saga_requirements.h
src/: saga.c  saga.h  saga_builder.h  saga_data.h  saga_hash.h  saga_preprocessor.h
test/test_build/: saga_tests.out  testcases.c
test/unit_tests/: saga_add_test.c  saga_configurator.h  saga_pull_test.c
